# amnezia-tg-bot

./: .gitignore  README.md  pyproject.toml
amneziawg_bot/: config.py
bot/: __main__.py  config.py  loader.py
bot/routers/dialogs/: test.py
