[tool.poetry]
name = "amneziawg-bot"
version = "0.1.0"
description = ""
authors = [ "FlyTie" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.16.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
aiogram-dialog = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
